--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
@@ -10,3 +10,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1000/eureka
+
+#ribbon:
+#  ReadTimeOut: 10000
+#  ConnectTImeout: 10000
