Zuul过滤功能完成

--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/pom.xml
@@ -69,6 +69,23 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+        <!-- 引入SPringBoot与redis的整和场景，为Session共享提供帮助：因为所有的SESSION ID都保存在Redis中 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- 引入SpringBoot与 springSession的整合 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <!-- spring默认使用yml中的配置，但有时候要用传统的xml或properties配置，就需要使用spring-boot-configuration-processor -->
+        <!-- 包的作用是生成配置元数据:给自定义的配置类生成元数据信息的，因为spring也不知道你有哪些配置类 -->
+<!--        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>-->
     </dependencies>
 
 </project>
