--- a/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/pom.xml
@@ -21,5 +21,21 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+        <!-- 引入SPringBoot与redis的整和场景，为Session共享提供帮助：因为所有的SESSION ID都保存在Redis中 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- 引入SpringBoot与 springSession的整合 -->
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.atguigu.crowd</groupId>
+            <artifactId>atcrowdfunding05-common-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
