--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/pom.xml
@@ -81,11 +81,11 @@
         </dependency>
         <!-- spring默认使用yml中的配置，但有时候要用传统的xml或properties配置，就需要使用spring-boot-configuration-processor -->
         <!-- 包的作用是生成配置元数据:给自定义的配置类生成元数据信息的，因为spring也不知道你有哪些配置类 -->
-<!--        <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
 </project>
