--- a/atcrowdfunding05-common-util/pom.xml
+++ b/atcrowdfunding05-common-util/pom.xml
@@ -40,5 +40,17 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <!-- 加入OOS需要的依赖，即OOS的SDK客户端 -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+<!--        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>-->
     </dependencies>
 </project>
