--- a/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/pom.xml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>atcrowdfunding05-common-util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.atguigu.crowd</groupId>
+            <artifactId>atcrowdfunding09-member-entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 </project>
