部署完成  自主开发

--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
@@ -15,6 +15,6 @@ eureka:
     service-url:
       defaultZone: http://localhost:1000/eureka
 
-#ribbon:
-#  ReadTimeOut: 10000
-#  ConnectTImeout: 10000
+ribbon:
+  ReadTimeOut: 10000
+  ConnectTImeout: 10000
