--- a/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/src/main/resources/application.yml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding16-member-zuul/src/main/resources/application.yml
@@ -21,3 +21,6 @@ zuul:
     crowd-project:
       service-id: atguigu-crowd-project
       path: /project/**
+    crowd-order:
+      service-id: atguigu-crowd-order
+      path: /order/**
