--- a/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/application.yml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding13-member-project-consumer/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
     host: 127.0.0.1
   session:
     store-type: redis
+  servlet:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 100MB
 eureka:
   client:
     service-url:
