--- a/atcrowdfunding01-admin-parent/atcrowdfunding04-admin-entity/pom.xml
+++ b/atcrowdfunding01-admin-parent/atcrowdfunding04-admin-entity/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>atcrowdfunding04-admin-entity</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.atguigu.crowd</groupId>
+            <artifactId>atcrowdfunding09-member-entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
