--- a/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
+++ b/atcrowdfunding07-member-parent/atcrowdfunding12-member-authentication-consumer/src/main/resources/application.yml
@@ -14,7 +14,13 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:1000/eureka
-
 ribbon:
   ReadTimeOut: 10000
   ConnectTImeout: 10000
+aliyun:
+  oss:
+    access-key-id: LTAI4G5UUmcckQKxtnoEo3yV
+    accessKeySecert: 710Br6Gv50nYVR0mjbbMspu440SK5r
+    bucket-domain: http://verous1024.oss-cn-chengdu.aliyuncs.com
+    bucket-name: verous1024
+    end-point: http://oss-cn-chengdu.aliyuncs.com #注意从OSS上复制过来时，需要携带http://
